--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "portfolio",
   "version": "0.1.0",
   "private": false,
+  "license": "MIT",
   "dependencies": {
     "axios": "^0.27.2",
     "react": "^18.1.0",
